--- a/project/team/index.html
+++ b/project/team/index.html
@@ -238,16 +238,20 @@
                     <div class="newsBox">
                         <div class="notice">
                             <div class="noticeHd">
-                                <h2>What's News</h2>
-                                <p>노원당의 다양한 소식을<br>빠르게 전해드립니다.</p>
+                                <div class="noticeHdTxt">
+                                    <h2>What's News</h2>
+                                    <p>노원당의 다양한 소식을<br>빠르게 전해드립니다.</p>
+                                </div>
                             </div>
                             <div class="noticeTx">
-                                <ul>
-                                    <li><a href="#">노원당과 함께하는</a></li>
-                                    <li><a href="#">시스템 안정화를 위한 서버 점검 안내</a></li>
-                                    <li><a href="#">샌드위치 가격 조정 안내</a></li>
-                                    <li><a href="#">노원당 홈페이지 임시점검 안내</a></li>
-                                </ul>
+                                <div class="noticeTxt">
+                                    <ul>
+                                        <li><a href="#">노원당과 함께하는</a></li>
+                                        <li><a href="#">시스템 안정화를 위한 서버 점검 안내</a></li>
+                                        <li><a href="#">샌드위치 가격 조정 안내</a></li>
+                                        <li><a href="#">노원당 홈페이지 임시점검 안내</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                         <div class="notice2"></div>
