--- a/project/team/sub/best.html
+++ b/project/team/sub/best.html
@@ -40,13 +40,14 @@
               <div class="icon_wrap">
                 <a href="#" class="icon_txt">
                   <span><i class="fa-solid fa-bars" id="appmenu_icon"></i></span>
+                </div>   
                   <!-- 앱,태블릿 서브페이지 -->
                   <div class="hamburger_wrap">
                       <div class="close"><button onsubmit="" class="appmenu__close"><i class="fa-solid fa-xmark"id="appmenu__icon_x"></i></button></div>
                       <ul class="hamburger__ul">
                         <li class="na"><a href="#" class="na">로그인<i class="fa-solid fa-chevron-down" id="hbg__drop icon"></i></a>
                           <ul class="hbg__drop">
-                            <li><a href="login.html">로그인</a></li>
+                            <li><a href="sub/login.html">로그인</a></li>
                             <li><a href="membership.html">회원가입</a></li>
                           </ul>
                         </li>
@@ -58,7 +59,7 @@
                         </a></li>
                         <li class="na"><a href="#" class="na">메뉴소개<i class="fa-solid fa-chevron-down" id="hbg__drop icon"></i></a>
                           <ul class="hbg__drop">
-                            <li><a href="#">베스트</a></li>
+                            <li><a href="sub.html">베스트</a></li>
                             <li><a href="#">신상품</a></li>
                             <li><a href="#">식빵</a></li>
                             <li><a href="#">케이크</a></li>
@@ -101,7 +102,7 @@
                   </li>
                   <li><a href="#"><h2>메뉴소개</h2></a>
                     <ul class="header__menu_drop_ul"> 
-                      <li><a href="best.html">베스트</a></li>
+                      <li><a href="sub.html">베스트</a></li>
                       <li><a href="#">신상품</a></li>
                       <li><a href="#">식빵</a></li>
                       <li><a href="#">케이크</a></li>
@@ -134,7 +135,7 @@
           </div>
         </header>
       </div>
-    </div>
+    
 
       <section class="content">
         <div class="content_wrap">
@@ -205,46 +206,46 @@
       </section>
   
   
-  <footer>
-    <div class="inner">
-      <div class="share">
-        <ul>
-          <li><a href="#" class="twitter"><i class="fa-brands fa-twitter"></i>Twitter공유</a></li>
-          <li><a href="#" class="facebook"><i class="fa-brands fa-facebook-f"></i> Facebook공유</a></li>
-          <li><a href="#" class="instagram"><i class="fa-brands fa-square-instagram"></i> Instagram공유</a></li>
-        </ul>
+    <footer>
+      <div class="inner">
+        <div class="share">
+          <ul>
+            <li><a href="#" class="twitter"><i class="fa-brands fa-twitter"></i>Twitter공유</a></li>
+            <li><a href="#" class="facebook"><i class="fa-brands fa-facebook-f"></i> Facebook공유</a></li>
+            <li><a href="#" class="instagram"><i class="fa-brands fa-square-instagram"></i> Instagram공유</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-      <div id="footer">
-        <div class="inner"> 
-          <div class="footer__link">
-            <ul>
-            <li><a href="#" class="footer_menu">이용약관</a></li>
-            <li><a href="#" class="footer_menu">개인정보처리방침</a></li>
-            <li><a href="#" class="footer_menu">노원당카드</a></li>
-            <li><a href="#" class="footer_menu">점주관리자</a></li>
-            </ul>
-          </div>
-          <div class="footer__text">
-            <ul class="footer_txt copy">
-              <li><span>노원당</span></li>
-              <li>지구당 어딘가 외계인 35</li>
-              <li><span>대표이사는2조</span></li>
-              <li>전화: 084-487-4857</li>
-              <li><span>사업자등록번호: 가가-가가가</span></li>
-              <li><span>copyright &copy; by Guni</span></li>    
-            </ul>
-            <ul class="footer_txt copy">
-              <li><span>사진출처</span> https://www.sungsimdangmall.co.kr</li>
-              <li><span>사진출처</span> https://leesungdang1945.com/</li>
-            </ul>
-          </div>          
-        </div>  
-      </div>
+        <div id="footer">
+          <div class="inner"> 
+            <div class="footer__link">
+              <ul>
+              <li><a href="#" class="footer_menu">이용약관</a></li>
+              <li><a href="#" class="footer_menu">개인정보처리방침</a></li>
+              <li><a href="#" class="footer_menu">노원당카드</a></li>
+              <li><a href="#" class="footer_menu">점주관리자</a></li>
+              </ul>
+            </div>
+            <div class="footer__text">
+              <ul class="footer_txt copy">
+                <li><span>노원당</span></li>
+                <li>지구당 어딘가 외계인 35</li>
+                <li><span>대표이사는2조</span></li>
+                <li>전화: 084-487-4857</li>
+                <li><span>사업자등록번호: 가가-가가가</span></li>
+                <li><span>copyright &copy; by Guni</span></li>    
+              </ul>
+              <ul class="footer_txt copy">
+                <li><span>사진출처</span> https://www.sungsimdangmall.co.kr</li>
+                <li><span>사진출처</span> https://leesungdang1945.com/</li>
+              </ul>
+            </div>          
+          </div>  
+        </div>
     </footer>
     </div>
   </div>
-
+</div>
   
 </body>
 </html>
