--- a/project/team/index.html
+++ b/project/team/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>노원당</title>
     <script src="https://kit.fontawesome.com/27d9ad6fd0.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.6.4.min.js"></script>
@@ -96,8 +97,8 @@
                     <div class="mobileMenu">
                         <div class="mobileLogin">
                             <ul>
-                                <li><a href="#">로그인</a></li>
-                                <li><a href="#">회원가입</a></li>
+                                <li><a href="sub/login.html">로그인</a></li>
+                                <li><a href="sub/membership.html">회원가입</a></li>
                             </ul>
                         </div>
                         <nav>
@@ -238,20 +239,18 @@
                     <div class="newsBox">
                         <div class="notice">
                             <div class="noticeHd">
-                                <div class="noticeHdTxt">
+                                <div class="NTHD">
                                     <h2>What's News</h2>
                                     <p>노원당의 다양한 소식을<br>빠르게 전해드립니다.</p>
                                 </div>
                             </div>
                             <div class="noticeTx">
-                                <div class="noticeTxt">
-                                    <ul>
-                                        <li><a href="#">노원당과 함께하는</a></li>
-                                        <li><a href="#">시스템 안정화를 위한 서버 점검 안내</a></li>
-                                        <li><a href="#">샌드위치 가격 조정 안내</a></li>
-                                        <li><a href="#">노원당 홈페이지 임시점검 안내</a></li>
-                                    </ul>
-                                </div>
+                                <ul>
+                                    <li><a href="#">노원당과 함께하는</a></li>
+                                    <li><a href="#">시스템 안정화를 위한 서버 점검 안내</a></li>
+                                    <li><a href="#">샌드위치 가격 조정 안내</a></li>
+                                    <li><a href="#">노원당 홈페이지 임시점검 안내</a></li>
+                                </ul>
                             </div>
                         </div>
                         <div class="notice2"></div>
