--- a/team/index.html
+++ b/team/index.html
@@ -43,7 +43,7 @@
             <div class="header_nav">
                 <div class="gnbWrap"></div>
                 <nav>
-                    <ul>
+                    <ul class="gnbPc">
                         <li class="na"><a href="#" class="na">브랜드소개</a>
                             <ul class="sub1">
                                 <li><a href="#">브랜드역사</a></li>
@@ -151,8 +151,9 @@
         <div id="contents">
             <section class="main">
                 <!--메인화면이미지-->
-                <div><img src="images/main1.jpg" id="mainimg" alt="메인1"></div>
-                <div><img src="images/m_main1.jpg" id="Mobilemainimg" alt=""></div>
+                <div class="pc_main"><img src="images/main1.jpg" id="mainimg" alt="메인1"></div>
+                <div class="mb_main"><img src="images/m_main1.jpg" id="Mobilemainimg" alt=""></div>
+                <div class="tb_main"><img src="images/tablet_bg1.jpg" id="tabletmainimg" alt=""></div>
                 <a href="#" class="prev" onClick="prev(); return false"><i class="fa-solid fa-angle-left"></i></a>
                 <a href="#" class="next" onClick="next(); return false"><i class="fa-solid fa-angle-right"></i></a>
 
