--- a/team/index.html
+++ b/team/index.html
@@ -84,7 +84,7 @@
             <div id="mobileMenuall">
                 <div class="mobileCloseBtn">
                     <div class="btn">
-                        <a href="javascirpt:;" class="line">
+                        <a href="#" class="line">
                             <span>메뉴</span>
                         </a>
                     </div>
@@ -309,7 +309,7 @@
             </div>
             <div class="footerBox2">
                 <p class="txt1">
-                    주소 : 서울 노원구 ------ | 대표 : 홍길동 | 대표전화 : 02-0000-0000
+                    주소 : 서울 노원구 상계로1길 34 | 대표 : 장영아, 김원종, 김호찬 | 대표전화 : 02-0000-0000
                     <br>사진출처 : https://www.sungsimdangmall.co.kr/
                 </p>
                 <p class="logo"><a href="#">노원당</a></p>
