--- a/music/index.html
+++ b/music/index.html
@@ -6,15 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/layout.css">
+    <link rel="stylesheet" href="src/css/color.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <script src="src/js/"></script>
     <script src="src/js/"></script>
 </head>
 
 <body id="body">
     <div id="wrap">
-
+        <div id="header">
+            <div class="logo">로 고</div>
+            <div class="login">1</div>
+            <div class="nav">
+                <ul class="gnb">
+                    <li><a href="#">123</a></li>
+                    <li><a href="#">123</a></li>
+                    <li><a href="#">123</a></li>
+                    <li><a href="#">123</a></li>
+                    <li><a href="#">123</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-
 </body>
 
 </html>
