--- a/music/index.html
+++ b/music/index.html
@@ -10,26 +10,56 @@
     <link rel="stylesheet" href="src/css/layout.css">
     <link rel="stylesheet" href="src/css/color.css">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/font.css">
     <script src="src/js/"></script>
     <script src="src/js/"></script>
+    <script src="https://kit.fontawesome.com/1fec5e6e1a.js" crossorigin="anonymous"></script>
+    
 </head>
 
 <body id="body">
     <div id="wrap">
         <div id="header">
-            <div class="logo">로 고</div>
-            <div class="login">1</div>
-            <div class="nav">
-                <ul class="gnb">
-                    <li><a href="#">123</a></li>
-                    <li><a href="#">123</a></li>
-                    <li><a href="#">123</a></li>
-                    <li><a href="#">123</a></li>
-                    <li><a href="#">123</a></li>
-                </ul>
+            <div class="logo">
+                <h1>로고</h1>
+            </div>
+            <div class="gnb_wrap">
+                <div class="login"><i class="fa-solid fa-circle-user"></i>로그인</div>
+                <div class="memberShip">
+                    <p>로그인하고 할인 멤버십 확인하기</p>
+                    <div></div>
+                </div>
+                <div class="nav_search">
+                    <input type="text" placeholder="검색">
+                </div>
+                <div class="nav">
+                    <ul class="gnb">
+                        <li><a href="#">홈</a></li>
+                        <li><a href="#">차트</a></li>
+                        <li><a href="#">장르별</a></li>
+                        <li><a href="#">최신앨범</a></li>
+                    </ul>
+                    <ul class="sub">
+                        <li><a href="#">서비스 소개</a></li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">2</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="install">
+                <div class="pcInt">데스크톱앱 설치</div>
+                <div class="mobileInt">모바일앱 설치</div>
             </div>
         </div>
+        <div id="content">
+            213123
+        </div>
+        <div id="playBar">
+
+        </div>
     </div>
+    
 </body>
 
 </html>
