--- a/react/test1.html
+++ b/react/test1.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        let array = [ 11, 12, 13];
-        // alert(array[0]);
-        // alert(array[1]);
-
-        // let one = array[0];
-        // let two = array[1];
-
-        // 배열 비구조화 문법
-        let [one,two,three] = array;
-        alert(array)
+        var numbers = [1, 2, 3, 4, 5];
+        var processed = numbers.map(num => num * num); 
+        console.log(processed);
     </script>
 </head>
+
 <body>
-    
+    <ul>
+        <li>눈사람</li>
+        <li>얼음</li>
+        <li>눈</li>
+        <li>바람</li>
+    </ul>
 </body>
+
 </html>
